--- a/index.html
+++ b/index.html
@@ -18,6 +18,26 @@
     <img src="Bronbestanden/placeholder1.png" alt="placeholder1">
     <p>Welkom op de site van de opleiding</p>
 
+    <h2>Je kan volgend opleidingen bij ons volgen</h2>
+
+    <ul>
+        <li>bedrijf en organisatie
+            <ul>
+                <li>boekhouder</li>
+                <li>management assistant</li>
+            </ul>
+        </li>
+        <li>design & technologie
+            <ul>
+                <li>bouwkundige tekenaar</li>
+                <li>Informatica-Netwerk</li>
+                <li>Informatica-programmeur</li>
+                <li>Multimedia-& Informatietechnologie</li>
+            </ul>
+        </li>
+
+    </ul>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
